WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196247
[WPE][Qt] Uninitialized racy ViewBackend
https://bugs.webkit.org/show_bug.cgi?id=196247
Summary
[WPE][Qt] Uninitialized racy ViewBackend
Philippe Normand
Reported
2019-03-26 03:59:39 PDT
Sometimes resize() would be called before the ViewBackend is created, triggering a crash.
Attachments
Patch
(1.18 KB, patch)
2019-03-26 04:30 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2019-03-26 04:30:27 PDT
Created
attachment 365957
[details]
Patch
WebKit Commit Bot
Comment 2
2019-03-26 05:09:55 PDT
Comment on
attachment 365957
[details]
Patch Clearing flags on attachment: 365957 Committed
r243492
: <
https://trac.webkit.org/changeset/243492
>
WebKit Commit Bot
Comment 3
2019-03-26 05:09:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug