Merged r243492 - [WPE][Qt] Uninitialized racy ViewBackend https://bugs.webkit.org/show_bug.cgi?id=196247

Patch by Philippe Normand <pnormand@igalia.com> on 2019-03-26
Reviewed by Carlos Garcia Campos.

* UIProcess/API/wpe/qt/WPEQtView.h: Initialize the backend pointer to nullptr.